<resources>
    <string name="app_name">"Nerb"</string>
    <string name="title_file">"File"</string>
    <string name="title_maps">"Maps"</string>
    <string name="algorithm_label">"Algorithm: "</string>
    <string name="start_label">"Start         : "</string>
    <string name="goal_label">"Goal         : "</string>
    <string name="no_valid_coor_label">"No valid coordinates file"</string>
    <string name="choosematrix_label">"Matrix File"</string>
    <string name="choosecoor_label">"Coordinates File"</string>
    <string name="unchosen_label">"No file chosen"</string>
    <string name="run_label">"Run"</string>
    <string name="notrun_label">"Not yet run"</string>
    <string name="invalid_label">"Invalid"</string>

    <string name="result_label">"Result     :"</string>
    <string name="distance_label">"Distance :"</string>

    <string name="maps_key">"AIzaSyDVMrOzvvAszmFXVHZqf_dfLs-wfwTDz5M"</string>

</resources>